src/test/snapshots/ruby_fast_lsp__test__integration_test__module_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 3,
        "line": 8
      },
      "start": {
        "character": 0,
        "line": 0
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  }
]
