src/test/snapshots/ruby_fast_lsp__test__integration_test__module_log_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 29,
        "line": 17
      },
      "start": {
        "character": 4,
        "line": 17
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_method.rb"
  },
  {
    "range": {
      "end": {
        "character": 29,
        "line": 17
      },
      "start": {
        "character": 4,
        "line": 17
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/module_method.rb"
  }
]
