src/test/snapshots/ruby_fast_lsp__test__integration_test__my_mod_ref.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 12,
        "line": 0
      },
      "start": {
        "character": 7,
        "line": 0
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 13,
        "line": 10
      },
      "start": {
        "character": 8,
        "line": 10
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 11,
        "line": 12
      },
      "start": {
        "character": 6,
        "line": 12
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 10,
        "line": 13
      },
      "start": {
        "character": 5,
        "line": 13
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/const_single.rb"
  }
]
