src/test/snapshots/ruby_fast_lsp__test__integration_test__nested_foo_class_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 7,
        "line": 7
      },
      "start": {
        "character": 4,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  }
]
