src/test/snapshots/ruby_fast_lsp__test__integration_test__nested_foo_class_ref.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 13,
        "line": 3
      },
      "start": {
        "character": 10,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 23,
        "line": 11
      },
      "start": {
        "character": 0,
        "line": 11
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  }
]
