src/test/snapshots/ruby_fast_lsp__test__integration_test__qualified_service_method_def.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 22,
        "line": 30
      },
      "start": {
        "character": 15,
        "line": 30
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/qualified_method_call.rb"
  }
]
