src/test/snapshots/ruby_fast_lsp__test__integration_test__same_class_method_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 7,
        "line": 7
      },
      "start": {
        "character": 4,
        "line": 7
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/class_declaration.rb"
  }
]
