src/test/snapshots/ruby_fast_lsp__test__integration_test__square_method_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 5,
        "line": 58
      },
      "start": {
        "character": 4,
        "line": 58
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/basic_method_refs.rb"
  },
  {
    "range": {
      "end": {
        "character": 9,
        "line": 58
      },
      "start": {
        "character": 8,
        "line": 58
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/basic_method_refs.rb"
  }
]
